Actually update description because I accidentally undid my changes before prior commit

--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ p {
   backdrop-filter: blur(4px);
 }
 
-.project-meta {
+.project-info {
   text-align: center;
   font-size: 1.08rem;
   font-weight: 700;
